# AIPQ

./: .env.example  .gitignore  DEPLOY.md  LICENSE  README.md  docker-compose.yml  index.html  render.yaml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
ai-engine/: Dockerfile  db.py  llm_judge.py  main.py  prompt_library.py  providers.py  requirements.txt  scheduler.py
ai-engine/analyzers/: causal.py  coverage.py  intelligence.py
ai-engine/detectors/: drift_detector.py
ai-engine/evaluators/: pipeline.py  scoring.py
ai-engine/predictors/: causal_impact.py  conformal_predictor.py  drift_predictor.py
ai-engine/tests/: test_causal.py  test_causal_impact.py  test_completeness.py  test_conformal_predictor.py  test_coverage.py  test_drift_predictor.py  test_intelligence.py  test_llm_judge.py  test_portability.py  test_providers.py  test_scoring.py  (+1 more)
assets/: index-0afIP-nL.css  index-5ldqAs5a.css  index-B6Yuvifj.js  index-BEo2hNRa.js  index-BHDI0YkP.js  index-BTi19_Fk.css  index-BXZLaatC.css  index-BkSrt62a.css  index-ByHzfOJc.js  index-CophXlIe.js  index-Cptz-d74.css  index-D-Kp4Axy.js  index-D2Dlj01Z.js  index-D4GfxqI1.js  index-DF263zdR.css  index-DRofLT1X.css  index-DW2wnxsl.js  index-gNIi8lSw.js  index-mg2ohfLs.js  index-waaCUkoZ.js
backend/: Dockerfile  config.py  main.py  rate_limit.py  requirements.txt
cli/: aipq_cli.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
sdk/: README.md  pyproject.toml  requirements.txt
sdk/aipq/: __init__.py  cli.py  client.py  exceptions.py
sdk/tests/: test_aipq_client.py
(+45 files in other folders)
