[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aipq-sdk"
version = "0.1.0"
description = "Git for prompts — automatic quality gates, drift detection, and intelligent rollback for LLM prompts in production."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Kumaraswamy" }]
keywords = ["llm", "prompt-engineering", "prompt-versioning", "quality-gate", "drift-detection", "ai-observability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/bkumars22/AIPQ"
Repository = "https://github.com/bkumars22/AIPQ"
Issues = "https://github.com/bkumars22/AIPQ/issues"

[project.scripts]
aipq = "aipq.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["aipq"]

[tool.hatch.build.targets.sdist]
include = ["aipq/", "README.md", "LICENSE"]
